[package]
name = "raydium-cp-swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cp_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
devnet = []
client = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-memo = "4.0.0"
uint = "0.9.1"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }

[dev-dependencies]
quickcheck = "0.9"
proptest = "1.0"
rand = "0.8.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = true
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
